# home_automation_server

./: .gitignore  INTELLIJ_SETUP.md  README.md  RENAME_SUMMARY.md  SAMSUNG_INTEGRATION_PROMPT.md  alembic.ini  pyproject.toml  setup_env.ps1
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_samsung_tv_device.py  0003_automation_flow_device_kind.py
data/: .gitkeep
home_automation_server/: main.py
home_automation_server/api/: apps.py  automations.py  controls.py  devices.py  pairing.py  ui.py  webhooks.py
home_automation_server/core/: config.py
home_automation_server/db/: session.py
home_automation_server/frontend/static/css/: style.css
home_automation_server/frontend/static/js/: main.js
home_automation_server/frontend/templates/: apps.html  automations.html  base.html  controls.html  devices.html  index.html  pairing.html
home_automation_server/frontend/templates/partials/: controls_appletv.html  controls_samsung.html
home_automation_server/models/: models.py
home_automation_server/services/: automation_engine.py  automation_events.py  device_provider.py  provider_resolver.py  pyatv_service.py  samsungtv_service.py
tests/: conftest.py  test_apps.py  test_automation_events.py  test_automations.py  test_automations_multidevice.py  test_devices.py  test_multidevice_routes.py  test_samsung_devices.py  test_ui_controls.py
